added misc swagger
